src/pyAntlr/pyParser.java
// Generated from C:/Users/Lenovo/Desktop/Projects/compiler/Compiler_Project/src/pyAntlr/pyParser.g4 by ANTLR 4.13.2
package pyAntlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class pyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, FROM=3, IMPORT=4, AS=5, DEF=6, RETURN=7, IF=8, ELSE=9, 
		NONE=10, TRUE=11, FALSE=12, FOR=13, IN=14, IS=15, APP=16, ROUTE=17, RENDER_TEMPLATE=18, 
		REQUEST=19, REDIRECT=20, URL_FOR=21, ROUTE_PATH=22, METHODS=23, HTTP_METHOD=24, 
		HTML_FILE=25, URL=26, INT=27, FLOAT=28, STRING=29, ID=30, ASSIGN=31, PLUS=32, 
		MINUS=33, STAR=34, DIV=35, EQ=36, NEQ=37, LT=38, GT=39, COLON=40, COMMA=41, 
		DOT=42, L_PAREN=43, R_PAREN=44, L_CUR_B=45, R_CUR_B=46, L_SQ_B=47, R_SQ_B=48, 
		NEWLINE=49, WS=50, COMMENT=51;
	public static final int
		RULE_pyProgram = 0, RULE_identifier = 1, RULE_statement = 2, RULE_import_stmt = 3, 
		RULE_dotted_name = 4, RULE_import_list = 5, RULE_import_item = 6, RULE_assignment = 7, 
		RULE_func_def = 8, RULE_param_list = 9, RULE_suite = 10, RULE_route_def = 11, 
		RULE_route_path = 12, RULE_route_params = 13, RULE_if_stmt = 14, RULE_for_stmt = 15, 
		RULE_return_stmt = 16, RULE_return_args = 17, RULE_expr_stmt = 18, RULE_expr = 19, 
		RULE_orExpr = 20, RULE_equalityExpr = 21, RULE_relationalExpr = 22, RULE_additiveExpr = 23, 
		RULE_multiplicativeExpr = 24, RULE_unaryExpr = 25, RULE_postfixExpr = 26, 
		RULE_postfixOp = 27, RULE_primaryExpr = 28, RULE_generator_expr = 29, 
		RULE_list_literal = 30, RULE_dict_literal = 31, RULE_dict_entry = 32, 
		RULE_arg = 33, RULE_arg_list = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"pyProgram", "identifier", "statement", "import_stmt", "dotted_name", 
			"import_list", "import_item", "assignment", "func_def", "param_list", 
			"suite", "route_def", "route_path", "route_params", "if_stmt", "for_stmt", 
			"return_stmt", "return_args", "expr_stmt", "expr", "orExpr", "equalityExpr", 
			"relationalExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", 
			"postfixExpr", "postfixOp", "primaryExpr", "generator_expr", "list_literal", 
			"dict_literal", "dict_entry", "arg", "arg_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'from'", "'import'", "'as'", "'def'", "'return'", 
			"'if'", "'else'", "'None'", "'True'", "'False'", "'for'", "'in'", "'is'", 
			"'app'", "'@app.route'", "'render_template'", "'request'", "'redirect'", 
			"'url_for'", null, "'methods'", null, null, null, null, null, null, null, 
			"'='", "'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'>'", "':'", 
			"','", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "FROM", "IMPORT", "AS", "DEF", "RETURN", "IF", 
			"ELSE", "NONE", "TRUE", "FALSE", "FOR", "IN", "IS", "APP", "ROUTE", "RENDER_TEMPLATE", 
			"REQUEST", "REDIRECT", "URL_FOR", "ROUTE_PATH", "METHODS", "HTTP_METHOD", 
			"HTML_FILE", "URL", "INT", "FLOAT", "STRING", "ID", "ASSIGN", "PLUS", 
			"MINUS", "STAR", "DIV", "EQ", "NEQ", "LT", "GT", "COLON", "COMMA", "DOT", 
			"L_PAREN", "R_PAREN", "L_CUR_B", "R_CUR_B", "L_SQ_B", "R_SQ_B", "NEWLINE", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PyProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(pyParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(pyParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(pyParser.NEWLINE, i);
		}
		public PyProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pyProgram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterPyProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitPyProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitPyProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PyProgramContext pyProgram() throws RecognitionException {
		PyProgramContext _localctx = new PyProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pyProgram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 747678547787224L) != 0)) {
				{
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(70);
					statement();
					}
					break;
				case 2:
					{
					setState(71);
					match(NEWLINE);
					}
					break;
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(pyParser.ID, 0); }
		public TerminalNode APP() { return getToken(pyParser.APP, 0); }
		public TerminalNode RENDER_TEMPLATE() { return getToken(pyParser.RENDER_TEMPLATE, 0); }
		public TerminalNode REQUEST() { return getToken(pyParser.REQUEST, 0); }
		public TerminalNode REDIRECT() { return getToken(pyParser.REDIRECT, 0); }
		public TerminalNode URL_FOR() { return getToken(pyParser.URL_FOR, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1077739520L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends StatementContext {
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public IfStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentStatementContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public AssignmentStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitAssignmentStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitAssignmentStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefStatementContext extends StatementContext {
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public FuncDefStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterFuncDefStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitFuncDefStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitFuncDefStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends StatementContext {
		public Return_stmtContext return_stmt() {
			return getRuleContext(Return_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public ReturnStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitReturnStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprStatementContext extends StatementContext {
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public ExprStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterExprStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitExprStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitExprStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RouteStatementContext extends StatementContext {
		public Route_defContext route_def() {
			return getRuleContext(Route_defContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public RouteStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterRouteStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitRouteStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitRouteStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends StatementContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public ImportStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForStatementContext extends StatementContext {
		public For_stmtContext for_stmt() {
			return getRuleContext(For_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pyParser.NEWLINE, 0); }
		public ForStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterForStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitForStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitForStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new ImportStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(81);
					match(NEWLINE);
					}
				}

				setState(84);
				import_stmt();
				}
				break;
			case 2:
				_localctx = new AssignmentStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(85);
					match(NEWLINE);
					}
				}

				setState(88);
				assignment();
				}
				break;
			case 3:
				_localctx = new ReturnStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(89);
					match(NEWLINE);
					}
				}

				setState(92);
				return_stmt();
				}
				break;
			case 4:
				_localctx = new ExprStatementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(93);
					match(NEWLINE);
					}
					break;
				}
				setState(96);
				expr_stmt();
				}
				break;
			case 5:
				_localctx = new RouteStatementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(97);
					match(NEWLINE);
					}
				}

				setState(100);
				route_def();
				}
				break;
			case 6:
				_localctx = new FuncDefStatementContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(101);
					match(NEWLINE);
					}
				}

				setState(104);
				func_def();
				}
				break;
			case 7:
				_localctx = new IfStatementContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(105);
					match(NEWLINE);
					}
				}

				setState(108);
				if_stmt();
				}
				break;
			case 8:
				_localctx = new ForStatementContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(109);
					match(NEWLINE);
					}
				}

				setState(112);
				for_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_stmtContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(pyParser.IMPORT, 0); }
		public Import_listContext import_list() {
			return getRuleContext(Import_listContext.class,0);
		}
		public List<TerminalNode> FROM() { return getTokens(pyParser.FROM); }
		public TerminalNode FROM(int i) {
			return getToken(pyParser.FROM, i);
		}
		public List<Dotted_nameContext> dotted_name() {
			return getRuleContexts(Dotted_nameContext.class);
		}
		public Dotted_nameContext dotted_name(int i) {
			return getRuleContext(Dotted_nameContext.class,i);
		}
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterImport_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitImport_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitImport_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_import_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FROM) {
				{
				{
				setState(115);
				match(FROM);
				setState(116);
				dotted_name();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(IMPORT);
			setState(123);
			import_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dotted_nameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(pyParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pyParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(pyParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(pyParser.DOT, i);
		}
		public Dotted_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dotted_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterDotted_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitDotted_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitDotted_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dotted_nameContext dotted_name() throws RecognitionException {
		Dotted_nameContext _localctx = new Dotted_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dotted_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(ID);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(126);
				match(DOT);
				setState(127);
				match(ID);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_listContext extends ParserRuleContext {
		public List<Import_itemContext> import_item() {
			return getRuleContexts(Import_itemContext.class);
		}
		public Import_itemContext import_item(int i) {
			return getRuleContext(Import_itemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pyParser.COMMA, i);
		}
		public Import_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterImport_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitImport_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitImport_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_listContext import_list() throws RecognitionException {
		Import_listContext _localctx = new Import_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_import_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			import_item();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(134);
				match(COMMA);
				setState(135);
				import_item();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_itemContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode AS() { return getToken(pyParser.AS, 0); }
		public TerminalNode ID() { return getToken(pyParser.ID, 0); }
		public Import_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterImport_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitImport_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitImport_item(this);
			else return visitor.visitChildren(this);
		}
	}
